@@ -1,3 +1,7 @@
+1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* iostubs.c (netfs_S_io_map_segment): New function.
+
 1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* file-get-storage-info.c: Add #include <sys/mman.h>.
